@@ -3,6 +3,7 @@ NEXT UNRELEASED
 - Fix RPM upgrade not pulling in required XML::TreeBuilder version. BZ #1053609
 - Allow PDF to build without any authors. BZ #1050975
 - Increase XML::LibXSLT::max_depth to 10K. BZ #1035525
+- Include entrytbl in cols count. BZ #1069405
 
 4.0.0 Wed Dec 18 2013
 - Support DocBook 5 as input format. BZ #1005042
